# fitnesstrax

./: .gitignore  Cargo.toml  LICENSE  Makefile  default.nix  readme.md  shell.nix
.circleci/: config.yml
client/: default.nix  index.html  package-lock.json  package.json  setupOnFileLoad.ts  tsconfig.json  webpack.config.js
client-javascript/: index.html  package-lock.json  package.json
client-javascript/src/: client.js  common.js  main.js
client-javascript/src/components/: DailyEntry.js  DailySummary.js  DateForm.js  HistoryView.js  Home.js  LoginForm.js  NewDay.js  SetRepRow.js  Summary.js  TimeDistanceRow.js  ValidatedText.js  WeightForm.js
client-javascript/src/state/: actions.js  reducers.js  state.js
client/src/: auth.ts  classnames.ts  client.test.ts  client.ts  common.test.ts  common.ts  controller.ts  datetimetz.test.ts  datetimetz.ts  equals.ts  index.html  main.tsx  moment-extensions.test.ts  moment-extensions.ts  option.ts  pad-left.d.ts  parsers.test.ts  parsers.ts  redux.ts  result.ts  style.css  testSetup.ts  trace.ts  translations.test.ts  translations.ts  types.ts  userPrefs.ts
client/src/components/: App.test.tsx  App.tsx  Calendar.tsx  DailyEntry.test.tsx  DailyEntry.tsx  DailySummary.tsx  DateForm.tsx  Distance.tsx  Duration.tsx  Error.tsx  HistoryView.tsx  Home.tsx  Icon.tsx  InputField.test.tsx  InputField.tsx  LoginForm.test.tsx  LoginForm.tsx  NewDay.tsx  Row.tsx  SetRepRow.tsx  Sets.tsx  Summary.tsx  TimeDistanceRow.tsx  ValidatedInputField.test.tsx  ValidatedInputField.tsx  ValidatedText.tsx  Weight.tsx  WeightForm.tsx  range.tsx
client/src/components/Card/: index.tsx  style.css
client/src/components/CenterPanel/: index.tsx  style.css
client/src/components/DailyEntry/: AddWorkout.tsx  Steps.tsx  Summary.tsx  TimeDistance.tsx  Weight.tsx  index.test.tsx  index.tsx  style.css
client/src/components/DatePicker/: index.tsx  style.css
client/src/components/InputField/: index.tsx  input.test.tsx
client/src/components/Navigation/: index.test.tsx  index.tsx  style.css
client/src/components/Navigation/__snapshots__/: index.test.tsx.snap
client/src/components/RangePicker/: index.tsx  style.css
client/src/components/RangeSummary/: index.tsx
client/src/components/ValidatedInputField/: index.test.tsx  index.tsx  style.css
client/src/components/ValidatedInputField/__snapshots__/: index.test.tsx.snap
client/src/components/Workout/: SetRep.tsx  TimeDistance.tsx  index.tsx  style.css
client/src/components/__snapshots__/: InputField.test.tsx.snap  LoginForm.test.tsx.snap  ValidatedInputField.test.tsx.snap
client/src/i18n/: index.ts  translations.test.ts  translations.ts
client/src/settings/: index.ts  languages.test.ts  languages.ts  unitSystems.test.ts  unitSystems.ts
client/src/state/: actions.ts  index.ts  state.ts
client/src/state.old/: actions.ts  reducers.ts
client/src/types/: index.ts  range.test.ts  range.ts
client/src/views/App/: index.test.tsx  index.tsx
client/src/views/History/: index.test.tsx  index.tsx
client/src/views/History/__snapshots__/: index.test.tsx.snap
client/src/views/Home/: index.tsx
client/src/views/Login/: index.test.tsx  index.tsx
client/src/views/Login/__snapshots__/: index.test.tsx.snap
client/src/views/UserPrefs/: index.test.tsx  index.tsx
client/src/views/UserPrefs/__snapshots__/: index.test.tsx.snap
dockers/ubuntu-build/: Dockerfile
fitnesstrax-lib/: Cargo.nix  Cargo.toml  crates-io.list  crates-io.nix  default.nix
fitnesstrax-lib/src/: error.rs  lib.rs
fitnesstrax-lib/src/types/: repduration.rs  setrep.rs  steps.rs  timedistance.rs  weight.rs
gtk/: Cargo.nix  Cargo.toml  crates-io.list  crates-io.nix  default.nix  run.sh
gtk/src/: config.rs  context.rs  conversions.rs  errors.rs  i18n.rs  lib.rs  main.rs  preferences.rs  range.rs  settings.rs
gtk/src/components/: basics.rs  date_and_time.rs  date_selector.rs  day.rs  history.rs  main_window.rs  menu_bar.rs  mod.rs  preferences.rs  range_bar.rs  range_selector.rs  rep_duration.rs  set_rep.rs  setting.rs  steps.rs  swappable.rs  time_distance.rs  time_distance_row.rs  validated_text_entry.rs  weight.rs
gtk/src/i18n/: mod.rs  text.rs  units.rs
gtk/src/types/: mod.rs
nixpkgs/: node10.nix  node9.nix  rust-1.33.nix
server/: Cargo.nix  Cargo.toml  auth.db  crates-io.list  crates-io.nix  db.series  default.nix  runapp.sh
server/src/: core.rs  ironserver.rs  lib.rs  load_records.rs  logging.rs  server.rs  space_importer.rs  staticfile.rs  time-distance.rs  utils.rs  web.rs
server/src/middleware/: mod.rs  staticfile.rs
server/src/trax/: mod.rs
server/src/trax/types/: comments.rs  mod.rs  repduration.rs  setrep.rs  steps.rs  time_distance.rs  timedistance.rs  weight.rs
server/src/types/: common.rs  mod.rs  time_distance.rs  weight.rs
server/tests/: time-distance.rs
src/: lib.rs  main.rs
src/types/: common.rs  mod.rs  time_distance.rs  weight.rs
