[package]
name = "fitnesstrax-gtk"
version = "0.1.0"
authors = ["savanni"]
edition = "2018"

[dependencies]
chrono-tz = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
emseries = "0.4.0"
fitnesstrax = { path = "../fitnesstrax-lib" }
gio = { version = "", features = ["v2_44"] }
glib = "0.8.2"
gtk = { version = "0.8.0", features = ["v3_16"] }
regex = "1.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "*"
tzdata = "0.4.1"

[[bin]]
name = "fitnesstrax-gtk"
path = "src/main.rs"
