[package]
name = "fitnesstrax"
version = "0.1.0"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
emseries = { git = "https://github.com/luminescent-dreams/emseries", branch = "sol" }
# emseries = "0.2.0"
# emseries = { path = "../emseries" }
iron = "0.6"
iron-cors = "0.8.0"
# orizentic = { path = "../../orizentic/rust" }
orizentic = { git = "https://github.com/luminescent-dreams/orizentic", branch = "sol" }
params = "0.8.0"
percent-encoding = "1.0.1"
router = "*"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
structopt = { version = "0.2", default-features = true }

[[bin]]
name = "app"
path = "src/web.rs"

# [[bin]]
# name = "weight"
# path = "src/weight.rs"
#
# [[bin]]
# name = "time-distance"
# path = "src/time-distance.rs"

# [[bin]]
# name = "gui"
# path = "src/gui.rs"

# rand = { git = "https://github.com/rust-lang-nursery/rand", branch = "next" }
# hello_utils = { path = "hello_utils" }
