[package]
name = "fitnesstrax"
version = "0.1.0"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
# emseries = "0.3.0"
# emseries = { path = "../../emseries" }
emseries = { git = "https://github.com/luminescent-dreams/emseries", branch = "sol" }
iron = "0.6"
iron-cors = "0.8.0"
micrologger = { git = "https://github.com/luminescent-dreams/micrologger", branch = "sol" }
orizentic = "1.0.0"
params = "0.8.0"
percent-encoding = "1.0.1"
router = "*"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
staticfile = "*"
structopt = { version = "0.2", default-features = true }
urlencoding = "1.0.0"

[dependencies.mount]

git = "https://github.com/iron/mount.git"

[[bin]]
name = "app"
path = "src/web.rs"

[[bin]]
name = "load_records"
path = "src/load_records.rs"

# [[bin]]
# name = "weight"
# path = "src/weight.rs"
#
# [[bin]]
# name = "time-distance"
# path = "src/time-distance.rs"

# [[bin]]
# name = "gui"
# path = "src/gui.rs"

# rand = { git = "https://github.com/rust-lang-nursery/rand", branch = "next" }
# hello_utils = { path = "hello_utils" }
